--- a/requirements.txt
+++ b/requirements.txt
@@ -36,4 +36,5 @@ psutil  # system utilization
 thop  # FLOPs computation
 # albumentations>=1.0.3
 # pycocotools>=2.0  # COCO mAP
-# roboflow
+roboflow
+gdown
